--- a/model/train.ipynb
+++ b/model/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "06c0d47f",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
+   "id": "232ae64e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "71251a41",
    "metadata": {},
    "outputs": [
@@ -118,7 +128,7 @@
        "4  Petter Mattei's \"Love in the Time of Money\" is...  positive"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bff891e2",
    "metadata": {},
    "outputs": [],
@@ -141,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "725e0bb1",
    "metadata": {},
    "outputs": [],
@@ -158,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "289c81df",
    "metadata": {},
    "outputs": [
@@ -239,7 +249,7 @@
        "4  petter matteis love time money visually stunni...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6336c86c",
    "metadata": {},
    "outputs": [],
@@ -272,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e51aa989",
    "metadata": {},
    "outputs": [],
@@ -284,19 +294,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "13b2625b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectorizer = TfidfVectorizer()\n",
-    "X_train_tfidf = vectorizer.fit_transform(X_train)\n",
-    "X_test_tfidf = vectorizer.transform(X_test)\n"
+    "# vectorizer = TfidfVectorizer()\n",
+    "# X_train_tfidf = vectorizer.fit_transform(X_train)\n",
+    "# X_test_tfidf = vectorizer.transform(X_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "cbc3edb1",
    "metadata": {},
    "outputs": [
@@ -309,12 +319,26 @@
     }
    ],
    "source": [
-    "print(hasattr(vectorizer, \"idf_\"))\n"
+    "# print(hasattr(vectorizer, \"idf_\"))\n",
+    "# "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "bc224695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = Pipeline([\n",
+    "    (\"tfidf\", TfidfVectorizer()),\n",
+    "    (\"clf\", LogisticRegression(max_iter=1000))\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "12d999c5",
    "metadata": {},
    "outputs": [
@@ -725,25 +749,28 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LogisticRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression()</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Pipeline(steps=[(&#x27;tfidf&#x27;, TfidfVectorizer()),\n",
+       "                (&#x27;clf&#x27;, LogisticRegression(max_iter=1000))])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;Pipeline<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.pipeline.Pipeline.html\">?<span>Documentation for Pipeline</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>Pipeline(steps=[(&#x27;tfidf&#x27;, TfidfVectorizer()),\n",
+       "                (&#x27;clf&#x27;, LogisticRegression(max_iter=1000))])</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;TfidfVectorizer<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html\">?<span>Documentation for TfidfVectorizer</span></a></label><div class=\"sk-toggleable__content fitted\"><pre>TfidfVectorizer()</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;LogisticRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(max_iter=1000)</pre></div> </div></div></div></div></div></div>"
       ],
       "text/plain": [
-       "LogisticRegression()"
+       "Pipeline(steps=[('tfidf', TfidfVectorizer()),\n",
+       "                ('clf', LogisticRegression(max_iter=1000))])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = LogisticRegression()\n",
-    "model.fit(X_train_tfidf, y_train)\n"
+    "# model = LogisticRegression()\n",
+    "pipeline.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "db4dd172",
    "metadata": {},
    "outputs": [
@@ -765,7 +792,7 @@
     }
    ],
    "source": [
-    "y_pred = model.predict(X_test_tfidf)\n",
+    "y_pred = pipeline.predict(X_test)\n",
     "\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(classification_report(y_test, y_pred))\n"
@@ -773,43 +800,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "e27b8b14",
+   "execution_count": 15,
+   "id": "1368d194",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save ONE object\n",
+    "with open(\"sentiment_pipeline.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(pipeline, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "71830fb1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "array([1], dtype=int64)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample_text = [\"This is really amazing  movie, it was fantastic and enjoyable!\"]\n",
-    "sample_clean = [clean_text(sample_text[0])]\n",
-    "sample_vec = vectorizer.transform(sample_clean)\n",
+    "with open(\"sentiment_pipeline.pkl\", \"rb\") as f:\n",
+    "    pipe = pickle.load(f)\n",
     "\n",
-    "prediction = model.predict(sample_vec)[0]\n",
-    "prediction\n"
+    "pipe.predict([\"I absolutely loved this movie\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e3d6c326",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "with open(\"sentiment_model.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(model, f)\n",
-    "\n",
-    "with open(\"vectorizer.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(vectorizer, f)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
